fixed z-index positioning to be below specs table overlays

--- a/style.scss
+++ b/style.scss
@@ -4663,7 +4663,7 @@ body.international .shopping-cart-wrapper { display: none; }
 	width: 42px;
 	height: 32px;
 	text-indent: -9999px;
-	z-index: 9998;
+	z-index: 1000;
 }
 .bx-wrapper .bx-controls-direction a.disabled {
 	display: none;
